syntax = "proto3";
option go_package = "/pb";
import "google/protobuf/empty.proto";

service ShopCartService{
  // 购物车列表
  rpc ShopCartItemList(AccountReq) returns (CartItemListRes);
  // 添加产品的购物车
  rpc AddShopCartItem(ShopCartReq) returns (CartItemRes);
  // 更新购物车内的产品
  rpc UpdateShopCartItem(ShopCartReq) returns(google.protobuf.Empty);
  // 删除购物车内的某个产品
  rpc DeleteShopCartItem(DelShopCartItem) returns (google.protobuf.Empty);
}

message DelShopCartItem{
  int32 accountId=1;
  int32 productId=2;
}

message ShopCartReq{
  int32 id=1;
  int32 accountId=2;
  int32 productId=3;
  int32 num=4;
  bool checked=5;
}

message CartItemListRes{
  int32  total=1;
  repeated CartItemRes itemList=2;
}

message CartItemRes{
  int32 id=1;
  int32 accountId=2;
  int32 productId=3;
  int32 num=4;
  bool checked=5;
}

message AccountReq{
  int32 accountId=1;
}